--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -60,7 +60,7 @@
 
             <div class="order-value-container info-container">
                 <span>Order value</span>
-                <span>2599 SEK</span>
+                <span><%= user.totalCartPrice %></span>
             </div>
             <div class="delivery-container info-container">
                 <span>Delivery</span>
@@ -71,7 +71,7 @@
             </div>
             <div class="total-price-container info-container">
                 <span>TOTAL</span>
-                <span>2599 SEK</span>
+                <span><%= user.totalCartPrice %></span>
             </div>
             <div class="checkout-button-container">
                 <button>Proceed to checkout</button>
