--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,17 +3,22 @@
 <%- include ("partial/tothetop") %>
 
 <body>
-    <h2>Log in</h2>
-    <form action="/login" method="POST">
-        <input type="email" name="loginEmail">
-        <input type="password" name="loginPassword">
-        <button type="submit">Log in</button>
-    </form>
+    <div class="container-fluid">
+        <div class="gecko-login">
+        <h2>Welcome to Gecko! Log in here</h2>
+        <form action="/login" method="POST">
+            <input type="email" name="loginEmail" placeholder="Email">
+            <input type="password" name="loginPassword" placeholder="Password">
+            <button type="submit">Log in</button>
+        </form>
 
-    <h3>Forgot password? </h3>
-    <a href="/reset">Send new</a>
+        <div>
+            <h3>Forgot password? <a href="/reset">Send new</a></h3>
+        </div>
 
-    <h4><a href="/register">Don´t have an account?</a></h4>
+        <h3>Don´t have an account? <a href="/register">Register here!</a></h3>
+        </div>
+    </div>
 
 
     <%- include ("partial/footer") %>
