--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,8 @@
 @import 'navbar';
 @import 'startPage';
 @import 'adminPage';
-@import 'loginPopUp';
+@import 'loginPage';
+@import 'register';
 @import 'miniShoppingCart';
 @import 'productPage';
 @import 'detailProductPage';
