--- a/scss/_adminPage.scss
+++ b/scss/_adminPage.scss
@@ -15,7 +15,18 @@
         h2 {
             text-align: center;
             margin: 0 0 20px 0;
+            font-size: 130%;
+            margin-top: 5%;
         }
+    }
+
+    .createproduct {
+        width: 50%;
+
+        .form-group {
+            font-size: 70%;
+        }
+        
     }
 
     form {
@@ -25,6 +36,7 @@
         .form-check {
             width: 100%;
             padding: 0;
+            font-size: 12px;
 
             input {
                 margin-left: 10px;
@@ -41,10 +53,13 @@
             align-items: center;
             width: 100%;
             
+            
             button {
                 margin: 10px 0;
                 background-color: #7f8375;
                 border-color: white;
+                font-size: 13px;
+                font-weight: 200;
             }
         }
     }
@@ -64,6 +79,7 @@
         h2 {
             text-align: center;
             margin: 20px 0;
+            font-size: 110%;
         }
     }
 
@@ -112,6 +128,9 @@
             button {
                 background-color: #7f8375;
                 border-color: white;
+                font-size: 13px;
+                font-weight: 200;
+
             }
         }
     }
