--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -18,32 +18,32 @@
 
             <div class="form-group">
                 <label for="title">Product title</label>
-                <input class="form-control" type="text" name="title" />
+                <input class="form-control form-control-sm" type="text" name="title" />
             </div>
 
             <div class="form-group">
                 <label for="imgUrl">Image URL</label>
-                <input class="form-control" type="text" name="imgUrl" />
+                <input class="form-control form-control-sm" type="text" name="imgUrl" />
             </div>
 
             <div class="form-group">
                 <label for="imgUrl2">Image URL 2</label>
-                <input class="form-control" type="text" name="imgUrlTwo" />
+                <input class="form-control form-control-sm" type="text" name="imgUrlTwo" />
             </div>
 
             <div class="form-group">
                 <label for="imgUrl3">Image URL 3</label>
-                <input class="form-control" type="text" name="imgUrlThree" />
+                <input class="form-control form-control-sm" type="text" name="imgUrlThree" />
             </div>
 
             <div class="form-group">
                 <label for="price">Price</label>
-                <input class="form-control" type="text" name="price" />
+                <input class="form-control form-control-sm" type="text" name="price" />
             </div>
 
             <div class="form-group">
                 <label for="description">Description</label>
-                <textarea rows="4" cols="50" class="form-control" type="text" name="description"></textarea>
+                <textarea rows="4" cols="50" class="form-control form-control-sm" type="text" name="description"></textarea>
             </div>
 
             <div class="form-check">
