--- a/public/main.css
+++ b/public/main.css
@@ -935,7 +935,7 @@ body {
       font-size: 0.8rem; }
       #checkout-body .all-products-container .product-container .image-container {
         width: 30%;
-        margin: 0 0 30px 0; }
+        margin: 0 0 0 0; }
         #checkout-body .all-products-container .product-container .image-container img {
           width: 90%; }
         @media (min-width: 820px) {
@@ -982,7 +982,9 @@ body {
         justify-content: space-between;
         text-align: right;
         text-transform: uppercase;
-        font-size: 1rem; }
+        font-size: 0.8rem; }
+        #checkout-body .all-products-container .product-container .total-item-price-container i {
+          color: black; }
   #checkout-body .order-info-container {
     width: 100%;
     display: flex;
@@ -994,6 +996,8 @@ body {
       flex-direction: row;
       justify-content: space-between;
       padding: 10px 0; }
+    #checkout-body .order-info-container .order-value-container, #checkout-body .order-info-container .delivery-container, #checkout-body .order-info-container .promotion-container {
+      font-size: 0.8rem; }
     #checkout-body .order-info-container .total-price-container {
       border-top: 1px solid #e1e1e1;
       padding: 20px 0;
@@ -1007,7 +1011,8 @@ body {
         background-color: #7f8375;
         color: white;
         border-color: #e1e1e1;
-        text-transform: uppercase; }
+        text-transform: uppercase;
+        font-size: 0.8rem; }
 
 html {
   scroll-behavior: smooth; }
