--- a/scss/_checkout.scss
+++ b/scss/_checkout.scss
@@ -40,7 +40,7 @@
     
             .image-container {
                 width: 30%;
-                margin: 0 0 30px 0;
+                margin: 0 0 0 0;
 
                 img {
                     width: 90%;
@@ -108,8 +108,11 @@
                 justify-content: space-between;
                 text-align: right;
                 text-transform: uppercase;
-                font-size: 1rem;
+                font-size: 0.8rem;
                 
+                i {
+                    color: black;
+                }
             }
         }
     }
@@ -127,19 +130,9 @@
             justify-content: space-between;
             padding: 10px 0;
         }
-        .order-value-container {
+        .order-value-container, .delivery-container, .promotion-container {
             
-
-        }
-
-        .delivery-container {
-            
-
-        }
-
-        .promotion-container {
-            
-
+            font-size: 0.8rem;
         }
 
         .total-price-container {
@@ -160,6 +153,7 @@
                 color: white;
                 border-color: rgb(225, 225, 225);
                 text-transform: uppercase;
+                font-size: 0.8rem;
             }
         }
 
