--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <%- include ("partial/tothetop") %>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid-login">
         <div class="gecko-login">
         <h2>Welcome to Gecko! Log in here</h2>
         <form action="/login" method="POST">
