--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
 <%- include ("partial/navbar") %>
 <%- include ("partial/tothetop") %>
 
-<div class="container-fluid">
+<div class="container-fluid-register">
     <div>
         <h2>Register</h2>
         <form action="/register" method="POST">
