--- a/scss/_register.scss
+++ b/scss/_register.scss
@@ -1,4 +1,4 @@
-.container-fluid {
+.container-fluid-register {
     display: flex;
     justify-content: center;
     margin-top: 30%;
@@ -9,10 +9,51 @@
         margin-top: 10%;
         margin-bottom: 10%;
     }
-    
+
+    h2 {
+        font-size: 15px;
+        text-transform: uppercase;
+        font-weight: 200;
+    }
+
+    input {
+        font-size: 12px;
+    }
+
     button {
-        @include tablet{
+        width: 300px;
+        height: 25px;
+        background-color: #949988;
+        color: white;
+        font-size: 13px;
+        margin-top: 5%;
+
+        @include tablet {
             width: 300px;
         }
     }
+
+    h3 {
+        font-size: 12px;
+        font-weight: 200;
+        margin: 10px;
+
+    }
+    a {
+        font-size: 12px;
+    }
+
+    a:link {
+        color: black;
+    }
+    a:visited {
+        color: black;
+    }
+    a:hover {
+        color: black;
+    }
+    a:active {
+        color: black;
+    }
+
 }
