--- a/views/detailProductPage.ejs
+++ b/views/detailProductPage.ejs
@@ -52,7 +52,7 @@
                     <span class="color-header">color</span>
                     <button class="color-picker"><span>choose color</span><span>+</span></button>
                 </div>
-                <form action="/cart/<%= clickedProduct._id %>" method="POST">
+                <form action="/cart/<%= clickedProduct._id %>" method="POST" class="addToBagForm">
                     <div class="size-container">
                     
                             <label for="size">Choose a size:</label>
