--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -21,7 +21,7 @@
 
     <div class="wishlistandcart">
         <div class="wishlist"></div>
-        <div class="cart"></div>
+        <a href="/checkout"><div class="cart"></div></a>
 
 
     </div>
