--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -126,8 +126,8 @@ body {
 
             .hamburger-button {
                 border: none;
+                outline: none;
                 background: white;
-
             }
 
             .search-icon {
