--- a/views/detailProductPage.ejs
+++ b/views/detailProductPage.ejs
@@ -55,7 +55,7 @@
                 <form action="/cart/<%= clickedProduct._id %>" method="POST" class="addToBagForm">
                     <div class="size-container">
                     
-                            <label for="size">Choose a size:</label>
+                            <label for="size" class="sizeLabel">Choose a size:</label>
                             <select id="" name="size">
                             <option value="XS">XS</option>
                             <option value="S">S</option>
@@ -83,7 +83,7 @@
                         </div>
                     </div>
 
-                </div>
+                
 
                 <!-- Sticky div that only appears in mobile -->
                 <div class="mobile-sticky">
