styling logo & navbar sticky

--- a/public/main.css
+++ b/public/main.css
@@ -165,7 +165,8 @@ body {
     transform: translateX(0%);
     transition-timing-function: ease-out;
     z-index: 2000;
-    margin-top: 60px; }
+    margin-top: 60px;
+    position: fixed; }
     @media (min-width: 820px) {
       body .nav-show {
         width: 70%; } }
@@ -178,7 +179,10 @@ body {
     flex-direction: row;
     justify-content: space-between;
     z-index: 1000;
-    margin: 10px 0 10px; }
+    overflow: hidden;
+    background-color: white;
+    position: -webkit-sticky;
+    padding: 7px; }
     body .burger-container .burgerandsearch {
       display: flex;
       flex-direction: row; }
@@ -195,35 +199,43 @@ body {
         height: 25px;
         width: 25px;
         margin: 5px 0 10px; }
-  body .logo {
-    background-image: url("../public/assets/Logo-gecko.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 40px;
-    width: 60px; }
-  body .wishlistandcart {
-    display: flex;
-    flex-direction: row;
-    margin-right: 10px; }
-    body .wishlistandcart .cart {
-      background-image: url("../public/assets/cart.png");
+    body .burger-container .logo {
+      background-image: url("../public/assets/Logo-gecko.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      height: 20px;
-      width: 20px;
-      margin: 10px 0 10px;
-      padding-left: 10px;
-      margin-left: 3px; }
-    body .wishlistandcart .wishlist {
-      background-image: url("../public/assets/heart.png");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height: 20px;
-      width: 20px;
-      margin-top: 12px; }
+      height: 43px;
+      width: 60px; }
+    body .burger-container .wishlistandcart {
+      display: flex;
+      flex-direction: row;
+      margin-right: 10px; }
+      body .burger-container .wishlistandcart .cart {
+        background-image: url("../public/assets/cart.png");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 20px;
+        width: 20px;
+        margin: 10px 0 10px;
+        padding-left: 10px;
+        margin-left: 3px; }
+      body .burger-container .wishlistandcart .wishlist {
+        background-image: url("../public/assets/heart.png");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 20px;
+        width: 20px;
+        margin-top: 12px; }
+  body .sticky {
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 2000;
+    border-top: 0;
+    margin-top: 0; }
 
 * {
   font-family: 'Spartan', sans-serif; }
