--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -4,30 +4,24 @@
                 subscribe for 10% off
             </div>
         </div>
+</div>
 
 <div class="burger-container">
-
     <div class="burgerandsearch">
         <button type="button" class="hamburger-button"><i class="fas fa-bars fa-lg menu"
                 aria-hidden="true"></i></button>
-        <div class="search-icon">
-
-        </div>
+        <div class="search-icon"></div>
     </div>
 
-    <div class="logo">
-
-    </div>
+    <a href="/"><div class="logo"></div></a>
 
     <div class="wishlistandcart">
         <div class="wishlist"></div>
         <a href="/checkout"><div class="cart"></div></a>
-
-
     </div>
-
-
 </div>
+
+
 <nav class="nav-container">
 
     <!-- <hr> -->
