--- a/public/main.css
+++ b/public/main.css
@@ -975,23 +975,34 @@ body {
 #checkout-body {
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   width: 90%;
-  margin: 60px 5% 0 5%; }
+  margin: 60px 5%; }
   @media (min-width: 820px) {
     #checkout-body {
       width: 70%;
-      margin: 60px 15% 0 15%; } }
-  #checkout-body .header-container {
-    width: 100%;
-    padding: 10px 0;
-    border-bottom: 1px solid #e1e1e1; }
-    #checkout-body .header-container span {
-      text-transform: uppercase; }
+      margin: 60px 15%; } }
+  @media (min-width: 1200px) {
+    #checkout-body {
+      width: 90%;
+      margin: 60px 5%;
+      justify-content: space-between; } }
   #checkout-body .all-products-container {
     width: 100%;
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    margin-bottom: 20px; }
+    @media (min-width: 1200px) {
+      #checkout-body .all-products-container {
+        width: 50%;
+        margin-bottom: 0; } }
+    #checkout-body .all-products-container .header-container {
+      width: 100%;
+      padding: 10px 0;
+      border-bottom: 1px solid #e1e1e1; }
+      #checkout-body .all-products-container .header-container span {
+        text-transform: uppercase; }
     #checkout-body .all-products-container .product-container {
       width: 100%;
       display: flex;
@@ -1007,10 +1018,10 @@ body {
           width: 90%; }
         @media (min-width: 820px) {
           #checkout-body .all-products-container .product-container .image-container {
-            width: 15%; } }
+            width: 20%; } }
         @media (min-width: 1200px) {
           #checkout-body .all-products-container .product-container .image-container {
-            width: 10%; } }
+            width: 20%; } }
       #checkout-body .all-products-container .product-container .info-container {
         width: 50%;
         display: flex;
@@ -1042,6 +1053,8 @@ body {
           #checkout-body .all-products-container .product-container .info-container .quantity-container a:hover {
             text-decoration: none;
             font-weight: bold; }
+          #checkout-body .all-products-container .product-container .info-container .quantity-container .product-amount {
+            margin: 0 10px; }
       #checkout-body .all-products-container .product-container .total-item-price-container {
         width: 20%;
         display: flex;
@@ -1055,8 +1068,20 @@ body {
   #checkout-body .order-info-container {
     width: 100%;
     display: flex;
-    flex-direction: column;
-    padding: 20px 0; }
+    flex-direction: column; }
+    @media (min-width: 1200px) {
+      #checkout-body .order-info-container {
+        width: 40%; } }
+    #checkout-body .order-info-container .header-container {
+      width: 100%;
+      display: none;
+      padding: 10px 0;
+      border-bottom: 1px solid #e1e1e1; }
+      #checkout-body .order-info-container .header-container span {
+        text-transform: uppercase; }
+      @media (min-width: 1200px) {
+        #checkout-body .order-info-container .header-container {
+          display: flex; } }
     #checkout-body .order-info-container .info-container {
       width: 100%;
       display: flex;
