--- a/scss/_checkout.scss
+++ b/scss/_checkout.scss
@@ -3,30 +3,45 @@
 
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     width: 90%;
-    margin: 60px 5% 0 5%;
+    margin: 60px 5%;
 
     @include tablet {
         width: 70%;
-        margin: 60px 15% 0 15%;
+        margin: 60px 15%;
+    }
+    @include desktop {
+        width: 90%;
+        margin: 60px 5%;
+        justify-content: space-between;
     }
     
 
-    .header-container {
-        width: 100%;
-        padding: 10px 0;
-        border-bottom: 1px solid rgb(225, 225, 225);
-
-        span {
-            text-transform: uppercase;
-        }
-    }
+    
 
     .all-products-container {
         width: 100%;
         display: flex;
         flex-direction: column;
+        margin-bottom: 20px;
+        
+
+        @include desktop {
+            width: 50%;
+            margin-bottom: 0;
+        }
+
+        .header-container {
+            width: 100%;
+            padding: 10px 0;
+            border-bottom: 1px solid rgb(225, 225, 225);
+    
+            span {
+                text-transform: uppercase;
+            }
+        }
 
 
         .product-container {
@@ -47,10 +62,10 @@
                 }
 
                 @include tablet {
-                    width: 15%;
+                    width: 20%;
                 }
                 @include desktop {
-                    width: 10%;
+                    width: 20%;
                 }
             }
     
@@ -98,6 +113,10 @@
                         text-decoration: none;
                         font-weight: bold;
                     }
+                    
+                    .product-amount {
+                        margin: 0 10px;
+                    }
                 }
             }
     
@@ -121,7 +140,25 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        padding: 20px 0;
+
+        @include desktop {
+            width: 40%;
+        }
+
+        .header-container {
+            width: 100%;
+            display: none;
+            padding: 10px 0;
+            border-bottom: 1px solid rgb(225, 225, 225);
+    
+            span {
+                text-transform: uppercase;
+            }
+
+            @include desktop {
+                display: flex;
+            }
+        }
 
         .info-container {
             width: 100%;
