--- a/scss/_checkout.scss
+++ b/scss/_checkout.scss
@@ -172,6 +172,10 @@
             font-size: 0.7rem;
         }
 
+        .order-value-container {
+            margin-top: 10px;
+        }
+
         .total-price-container {
             border-top: 1px solid rgb(225, 225, 225);
             padding: 20px 0;
